@@ -56,6 +56,9 @@
 <div id="sibling_template" class="sibling_container">
   <div class="message"></div>
 </div>
+<div id="mime_template" class="mime_container">
+  <div class="message"></div>
+</div>
 <span id="body_template" class="body_part"></span>
 <div id="link_warning_template" class="link_warning">
     <img class="close_link_warning button" />
